Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2339

Check failed: slot_desc->type().type == TYPE_STRING (15 vs. 10)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.3.0
    • None

    Description

      The query below runs fine on the stress test cluster when no mem limit is set but if the mem limit is 192M, then it crashes. (It ran 3 times in a row without a mem limit.)

      This is using the randomness database on c2120.hal.cloudera.com.

      Query: select (t2.int_col) * (t1.smallint_col_8) AS int_col,
      COALESCE(t1.bigint_col_1, t1.bigint_col_1, t1.smallint_col_8) AS int_col_1
      FROM table_15 t1
      INNER JOIN (
      SELECT
      COALESCE(393, NULL, LEAD(-232, 51) OVER (ORDER BY t1.varchar0155_col_9 DESC, t1.char0130_col_15)) AS int_col
      FROM table_17 t1
      WHERE
      (t1.decimal0402_col_2) != (t1.tinyint_col_8)
      ) t2 ON (t2.int_col) = (t1.tinyint_col_7)
      Socket error 104: Connection reset by peer
      

      Fatal log

      F0914 13:52:49.012533 10937 sorter.cc:680] Check failed: slot_desc->type().type == TYPE_STRING (15 vs. 10)
      

      Backtrace

      #6  0x0000000002047f6d in google::LogMessageFatal::~LogMessageFatal (this=0x7f8e4018b450, __in_chrg=<value optimized out>) at src/logging.cc:1836
      #7  0x00000000016f0349 in impala::Sorter::Run::GetNext<true> (this=0x9f50680, output_batch=0x22fbf0e0, eos=0x7f8e4018b5ef)
          at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorter.cc:680
      #8  0x00000000016ea8cd in impala::Sorter::Run::GetNextBatch (this=0x9f50680, output_batch=0x94e36e0) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorter.cc:605
      #9  0x00000000016f4d37 in boost::_mfi::mf1<impala::Status, impala::Sorter::Run, impala::RowBatch**>::operator() (this=0x94e36c8, p=0x9f50680, a1=0x94e36e0)
          at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/mem_fn_template.hpp:165
      #10 0x00000000016f4a4e in boost::_bi::list2<boost::_bi::value<impala::Sorter::Run*>, boost::arg<1> >::operator()<impala::Status, boost::_mfi::mf1<impala::Status, impala::Sorter::Run, impala::RowBatch**>, boost::_bi::list1<impala::RowBatch**&> > (this=0x94e36d8, f=..., a=...) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind.hpp:303
      #11 0x00000000016f484e in boost::_bi::bind_t<impala::Status, boost::_mfi::mf1<impala::Status, impala::Sorter::Run, impala::RowBatch**>, boost::_bi::list2<boost::_bi::value<impala::Sorter::Run*>, boost::arg<1> > >::operator()<impala::RowBatch**> (this=0x94e36c8, a1=@0x7f8e4018b740) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind_template.hpp:32
      #12 0x00000000016f4628 in boost::detail::function::function_obj_invoker1<boost::_bi::bind_t<impala::Status, boost::_mfi::mf1<impala::Status, impala::Sorter::Run, impala::RowBatch**>, boost::_bi::list2<boost::_bi::value<impala::Sorter::Run*>, boost::arg<1> > >, impala::Status, impala::RowBatch**>::invoke (function_obj_ptr=..., a0=0x94e36e0)
          at /opt/toolchain/boost-pic-1.55.0/include/boost/function/function_template.hpp:132
      #13 0x00000000015677f0 in boost::function1<impala::Status, impala::RowBatch**>::operator() (this=0x94e36c0, a0=0x94e36e0)
          at /opt/toolchain/boost-pic-1.55.0/include/boost/function/function_template.hpp:767
      #14 0x00000000015671cf in impala::SortedRunMerger::BatchedRowSupplier::Init (this=0x94e36c0, done=0x7f8e4018b837)
          at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorted-run-merger.cc:45
      #15 0x000000000156657a in impala::SortedRunMerger::Prepare(const std::vector<boost::function<impala::Status(impala::RowBatch**)>, std::allocator<boost::function<impala::Status(impala::RowBatch**)> > > &) (this=0xb7a52b0, input_runs=Traceback (most recent call last):
        File "/usr/lib64/../share/gdb/python/libstdcxx/v6/printers.py", line 192, in display_hint
          itype0  = self.val.type.template_argument(0)
      RuntimeError: syntax error, near `**)>, std::allocator<boost::function<'
      std::vector of length 2, capacity 2 = {...}) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorted-run-merger.cc:133
      #16 0x00000000016eeb96 in impala::Sorter::CreateMerger (this=0x22f5d180, num_runs=2) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorter.cc:1194
      #17 0x00000000016ed3f9 in impala::Sorter::InputDone (this=0x22f5d180) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/sorter.cc:1023
      #18 0x000000000168ccc2 in impala::SortNode::SortInput (this=0x2300f600, state=0xbe6e400) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/exec/sort-node.cc:160
      #19 0x000000000168bfb7 in impala::SortNode::Open (this=0x2300f600, state=0xbe6e400) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/exec/sort-node.cc:76
      #20 0x0000000001558dd8 in impala::PlanFragmentExecutor::OpenInternal (this=0xbe6ef28) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/plan-fragment-executor.cc:334
      #21 0x0000000001558c7e in impala::PlanFragmentExecutor::Open (this=0xbe6ef28) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/runtime/plan-fragment-executor.cc:320
      #22 0x000000000132d828 in impala::FragmentMgr::FragmentExecState::Exec (this=0xbe6ed00) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/service/fragment-exec-state.cc:50
      #23 0x0000000001325e46 in impala::FragmentMgr::FragmentExecThread (this=0x83dcfc0, exec_state=0xbe6ed00) at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/service/fragment-mgr.cc:70
      #24 0x0000000001329836 in boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>::operator() (this=0xb76e820, p=0x83dcfc0, a1=0xbe6ed00)
          at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/mem_fn_template.hpp:165
      #25 0x00000000013295ef in boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> >::operator()<boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list0> (this=0xb76e830, f=..., a=...) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind.hpp:313
      #26 0x0000000001328ed7 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >::operator() (this=0xb76e820) at /opt/toolchain/boost-pic-1.55.0/include/boost/bind/bind_template.hpp:20
      #27 0x0000000001328825 in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >, void>::invoke (function_obj_ptr=...)
          at /opt/toolchain/boost-pic-1.55.0/include/boost/function/function_template.hpp:153
      #28 0x00000000011f603d in boost::function0<void>::operator() (this=0x7f8e4018ccc0) at /opt/toolchain/boost-pic-1.55.0/include/boost/function/function_template.hpp:767
      #29 0x000000000140ecf2 in impala::Thread::SuperviseThread (name="exec-plan-fragment", category="impala-server", functor=..., thread_started=0x7f8e337f4b80)
          at /usr/src/debug/impala-2.3.0-cdh5.5.0-SNAPSHOT/be/src/util/thread.cc:314
      

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            caseyc casey
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: