IMPALA-2339: DCHECK in sorter should allow VARCHAR

This DCHECK was overly strict - this code path is correct for any
variable-length string type, not just STRING.

Change-Id: I724ea4c9d97056dc1e977124dd9ec0f41cf7a2ce
Reviewed-on: http://gerrit.cloudera.org:8080/840
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Internal Jenkins